<resources>
    <string name="app_name">AlertCenter</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="birth_date">Birth Date</string>
    <string name="date_fomat">DD-MM-YY</string>
    <string name="select">select</string>
    <string name="submit">Submit</string>
    <string name="todo">TODO</string>
</resources>
